--- a/packer/roles/install_jenkins/tasks/main.yaml
+++ b/packer/roles/install_jenkins/tasks/main.yaml
@@ -31,4 +31,4 @@
     dest: /etc/fstab
     state: present
     insertafter: EOF
-    line: "UUID=f0230132-4864-4eea-b634-0ad7f51507c9 /var/lib/jenkins ext4 defaults,discard 0 2"
+    line: "/dev/nvme1n1 /var/lib/jenkins ext4 defaults,discard 0 2"
